// Original file: proto/accountService.proto


export interface CreateData {
  'firstName'?: (string);
  'lastName'?: (string);
  'email'?: (string);
  'password'?: (string);
}

export interface CreateData__Output {
  'firstName': (string);
  'lastName': (string);
  'email': (string);
  'password': (string);
}
