// Original file: proto/accountService.proto


export interface UpdateData {
  'id'?: (number);
  'firstName'?: (string);
  'lastName'?: (string);
  'email'?: (string);
}

export interface UpdateData__Output {
  'id': (number);
  'firstName': (string);
  'lastName': (string);
  'email': (string);
}
